k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user105-front-deployment
  namespace: default
spec:
  replicas: 2
  
  strategy:
    type: RollingUpdate # 롤링 파트
    rollingUpdate:
      maxSurge: 1     
      maxUnavailable: 0 
      
  selector:
    matchLabels:
      app: user105-front
  template:
    metadata:
      labels:
        app: user105-front
    spec:
      containers: # image aws_account_id: 변경사항 확인해보기, back도
      - name: frontend-container
        image: 416225317325.dkr.ecr.ap-southeast-2.amazonaws.com/user105-front:latest
        
        ports:
        - containerPort: 80
